[Web Payments] Reject abort when required

Bug: 722427
Change-Id: I262b166944cad827524b3828e0df53a500d99336
Reviewed-on: https://chromium-review.googlesource.com/506232
Commit-Queue: Anthony Vallee-Dubois <anthonyvd@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#472567}
Former-commit-id: 6813c144fa64c40521277681894db2526dba7ec3