chrome/browser/ui/views/payments/payment_request_browsertest_base.h
@@ -83,6 +83,7 @@ class PaymentRequestBrowserTestBase
     SPEC_DONE_UPDATING,
     CVC_PROMPT_SHOWN,
     NOT_SUPPORTED_ERROR,
+    ABORT_CALLED,
   };
 
  protected:
@@ -103,6 +104,7 @@ class PaymentRequestBrowserTestBase
   void OnCanMakePaymentCalled() override;
   void OnNotSupportedError() override;
   void OnConnectionTerminated() override;
+  void OnAbortCalled() override;
 
   // PaymentRequestDialogView::ObserverForTest:
   void OnDialogOpened() override;
